--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <slf4j.version>1.6.0</slf4j.version>
+    <logback.version>0.9.28</logback.version>
   </properties>
   <licenses>
     <license>
@@ -74,12 +75,24 @@
       <version>2.5</version>
       <optional>true</optional>
     </dependency>
-    <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
-      <version>1.2.16</version>
-      <optional>true</optional>
-    </dependency>
+      <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-core</artifactId>
+        <version>${logback.version}</version>
+        <optional>true</optional>
+      </dependency>
+      <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-classic</artifactId>
+        <version>${logback.version}</version>
+        <optional>true</optional>
+      </dependency>
+      <dependency>
+        <groupId>log4j</groupId>
+        <artifactId>log4j</artifactId>
+        <version>1.2.16</version>
+        <optional>true</optional>
+      </dependency>
 
     <!-- TEST DEPENDENCIES -->
     <dependency>
@@ -94,12 +107,14 @@
       <version>1.8.5</version>
       <scope>test</scope>
     </dependency>
+      <!--
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-simple</artifactId>
       <version>${slf4j.version}</version>
       <optional>true</optional>
     </dependency>
+    -->
   </dependencies>
   <profiles>
     <profile>
