--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.pulseenergy.oss</groupId>
     <artifactId>hoptoad4j</artifactId>
-    <version>1.0</version>
+    <version>1.1-SNAPSHOT</version>
     <name>Hoptoad4j</name>
     <url>https://github.com/pulseenergy/hoptoad4j</url>
     <prerequisites>
