--- a/src/it/resources/log4j.properties
+++ b/src/it/resources/log4j.properties
@@ -4,7 +4,7 @@ log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
 
-log4j.appender.hoptoad4j=com.pulseenergy.oss.hoptoad.log4j.HoptoadLog4jAppender
+log4j.appender.hoptoad4j=com.pulseenergy.oss.airbrake.log4j.AirbrakeLog4jAppender
 log4j.appender.hoptoad4j.apiKey=${hoptoad4j.apiKey}
 log4j.appender.hoptoad4j.nodeName=${user.name}
 log4j.appender.hoptoad4j.componentName=${project.groupId}:${project.artifactId}:${project.version}
