--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -1,14 +1,14 @@
-log4j.rootCategory=DEBUG, stdout, hoptoad4j
+log4j.rootCategory=DEBUG, stdout, airbrake4j
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
 
-log4j.appender.hoptoad4j=com.pulseenergy.oss.airbrake.log4j.AirbrakeLog4jAppender
-log4j.appender.hoptoad4j.hoptoadUri=http://test/hoptoad
-log4j.appender.hoptoad4j.timeoutInMillis=5000
-log4j.appender.hoptoad4j.apiKey=API-KEY
-log4j.appender.hoptoad4j.environment=UNIT_TEST
+log4j.appender.airbrake4j=com.pulseenergy.oss.airbrake.log4j.AirbrakeLog4jAppender
+log4j.appender.airbrake4j.airbrakeUri=http://test/airbrake
+log4j.appender.airbrake4j.timeoutInMillis=5000
+log4j.appender.airbrake4j.apiKey=API-KEY
+log4j.appender.airbrake4j.environment=UNIT_TEST
 
 log4j.category.httpclient=WARN
 log4j.category.org.apache.commons.httpclient.HttpClient=WARN
