--- a/pom.xml
+++ b/pom.xml
@@ -171,7 +171,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-failsafe-plugin</artifactId>
-                        <version>2.7.2</version>
+                        <version>2.12</version>
                         <executions>
                             <execution>
                                 <id>integration-test</id>
@@ -186,6 +186,13 @@
                                 </goals>
                             </execution>
                         </executions>
+                        <configuration>
+                            <encoding>${project.build.sourceEncoding}</encoding>
+                            <skipTests>${skipITs}</skipTests>
+                            <includes>
+                                <include>**/*IT.java</include>
+                            </includes>
+                        </configuration>
                     </plugin>
                 </plugins>
             </build>
