--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.pulseenergy.oss</groupId>
     <artifactId>airbrake4j</artifactId>
-    <version>2.0-SNAPSHOT</version>
+    <version>2.0</version>
     <name>Airbrake4j</name>
     <url>https://github.com/pulseenergy/airbrake4j</url>
     <prerequisites>
@@ -23,7 +23,8 @@
     <scm>
         <connection>scm:git:ssh://git@github.com/pulseenergy/airbrake4j.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/pulseenergy/airbrake4j.git</developerConnection>
-    </scm>
+      <tag>airbrake4j-2.0</tag>
+  </scm>
     <build>
         <plugins>
             <plugin>
